src/main/java/org/example/breakoutdrop/Errors/Client/IncorrectPassword.java
package org.example.breakoutdrop.Errors.Client;

public class IncorrectPassword extends RuntimeException {
  public IncorrectPassword(String message) {
    super(message);
  }
}
